tests/ui/patchable-function-entry/patchable-function-entry-attribute.stderr
error: malformed `patchable_function_entry` attribute input
  --> $DIR/patchable-function-entry-attribute.rs:10:1
   |
LL | #[patchable_function_entry]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: must be of the form: `#[patchable_function_entry(prefix_nops = m, entry_nops = n)]`

error: Expected integer value between 0 and 255.
  --> $DIR/patchable-function-entry-attribute.rs:4:42
   |
LL | #[patchable_function_entry(prefix_nops = 256, entry_nops = 0)]
   |                                          ^^^

error: Expected integer value between 0 and 255.
  --> $DIR/patchable-function-entry-attribute.rs:7:42
   |
LL | #[patchable_function_entry(prefix_nops = "stringvalue", entry_nops = 0)]
   |                                          ^^^^^^^^^^^^^

error: Unexpected parameter name. Allowed names: prefix_nops, entry_nops
  --> $DIR/patchable-function-entry-attribute.rs:13:46
   |
LL | #[patchable_function_entry(prefix_nops = 10, something = 0)]
   |                                              ^^^^^^^^^^^^^

error: Must specify at least one parameter.
  --> $DIR/patchable-function-entry-attribute.rs:16:1
   |
LL | #[patchable_function_entry()]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

